<resources>
    <string name="app_name">Pomodori</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pomodori</string>
    <string name="nav_header_subtitle">Your personal pomodoro</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Timer</string>
    <string name="menu_gallery">Short-Term Goals</string>
    <string name="menu_slideshow">Long-Term Goals</string>
    <string name="quote_menu">Add Quotes</string>
    <string name="recent_menu">Recent Achievements</string>
    <string name="about_menu">About us/ Help</string>
    <string name="bucket_menu">Bucket List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_no_connection">noConnection</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>