<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pomodoro.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pomodoro.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pomodoro.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_quote"
        android:name="com.example.pomodoro.ui.quote.QuoteFragment"
        android:label="@string/quote_menu"
        tools:layout="@layout/fragment_quote" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.pomodoro.ui.about.AboutFragment"
        android:label="@string/about_menu"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_recent"
        android:name="com.example.pomodoro.ui.recent.RecentFragment"
        android:label="@string/recent_menu"
        tools:layout="@layout/fragment_recent" />
    <fragment
        android:id="@+id/nav_bucket"
        android:name="com.example.pomodoro.ui.bucket.BucketFragment"
        android:label="@string/bucket_menu"
        tools:layout="@layout/fragment_bucket" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.pomodoro.ui.logOut.LogOutFragment"
        android:label="Log out"
        tools:layout="@layout/fragment_logout"
        />
</navigation>