<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@android:drawable/star_off"
            android:title="@string/recent_menu" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="To-dos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_slideshow" />

        <item android:title="Others">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_bucket"
                        android:icon="@drawable/heart"
                        android:title="@string/bucket_menu" />
                    <item
                        android:id="@+id/nav_quote"
                        android:icon="@android:drawable/ic_menu_sort_by_size"
                        android:title="@string/quote_menu" />
                    <item
                        android:id="@+id/nav_about"
                        android:icon="@android:drawable/ic_menu_directions"
                        android:title="@string/about_menu" />

                </group>
            </menu>
        </item>

        <item android:title="   ">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id = "@+id/nav_logout"
                        android:title="Log Out" />
                </group>
            </menu>
        </item>

    </group>
</menu>